// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultsPanel > renders with 1 result 1`] = `
<div>
  <div
    data-testid="results-panel"
    style="color: rgb(61, 43, 31);"
  >
    <div
      style="margin-bottom: 24px;"
    >
      <p
        style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 8px;"
      >
        Services Complete
      </p>
      <div
        style="height: 1px; background-color: rgb(139, 105, 20); margin-bottom: 16px;"
      />
    </div>
    <div
      style="display: flex; gap: 12px; margin-bottom: 24px;"
    >
      <button
        data-testid="results-download-paper"
        style="flex: 1 1 0%; padding: 12px; border-radius: 8px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242); color: rgb(61, 43, 31); font-size: 13px; font-weight: 600; cursor: pointer;"
      >
        Download corrected paper
      </button>
      <button
        data-testid="results-download-receipt"
        style="flex: 1 1 0%; padding: 12px; border-radius: 8px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242); color: rgb(61, 43, 31); font-size: 13px; font-weight: 600; cursor: pointer;"
      >
        Download receipt
      </button>
    </div>
    <div
      style="margin-bottom: 24px;"
    >
      <p
        style="font-size: 13px; font-weight: 600; margin-bottom: 12px; opacity: 0.7;"
      >
        Individual service outputs
      </p>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          data-testid="results-service-spellcheck"
          style="padding: 12px; border-radius: 6px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242);"
        >
          <div
            style="display: flex; align-items: center; justify-content: space-between;"
          >
            <span
              style="font-size: 13px; font-weight: 600; color: rgb(61, 43, 31);"
            >
              Spellcheck
            </span>
            <div
              style="display: flex; gap: 8px;"
            >
              <button
                data-testid="results-service-spellcheck-view"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                View
              </button>
              <button
                data-testid="results-service-spellcheck-copy"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="receipt"
      style="background-color: rgb(250, 247, 242); border: 1px solid rgb(139, 105, 20); border-radius: 8px; padding: 24px; color: rgb(61, 43, 31);"
    >
      <div
        style="margin-bottom: 20px; border-bottom: 1px solid rgb(139, 105, 20); padding-bottom: 16px;"
      >
        <p
          style="font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.08em; margin-bottom: 8px;"
        >
          Woodchipper Service Receipt
        </p>
        <p
          style="font-size: 13px; opacity: 0.7;"
        >
          Date: 
          2026-07-11
        </p>
        <p
          style="font-size: 13px; opacity: 0.7;"
        >
          Evaluation Band: 
          strong
        </p>
      </div>
      <div
        style="margin-bottom: 0px; padding-bottom: 0px; border-bottom: medium;"
      >
        <p
          style="font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 8px;"
        >
          Spellcheck
        </p>
        <p
          style="font-size: 13px; line-height: 1.6; white-space: pre-wrap;"
        >
          Corrected 5 spelling errors: "recieve" → "receive", "occured" → "occurred", "seperate" → "separate", "definately" → "definitely", "accomodate" → "accommodate".
        </p>
        <p
          style="font-size: 12px; opacity: 0.6; margin-top: 4px;"
        >
          Changes applied: 
          5
        </p>
      </div>
      <div
        style="margin-top: 20px; padding-top: 16px; border-top: 1px solid rgb(139, 105, 20); font-size: 11px; opacity: 0.5;"
      >
        Generated by Woodchipper · 
        2026-07-11
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultsPanel > renders with 3 results 1`] = `
<div>
  <div
    data-testid="results-panel"
    style="color: rgb(61, 43, 31);"
  >
    <div
      style="margin-bottom: 24px;"
    >
      <p
        style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 8px;"
      >
        Services Complete
      </p>
      <div
        style="height: 1px; background-color: rgb(139, 105, 20); margin-bottom: 16px;"
      />
    </div>
    <div
      style="display: flex; gap: 12px; margin-bottom: 24px;"
    >
      <button
        data-testid="results-download-paper"
        style="flex: 1 1 0%; padding: 12px; border-radius: 8px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242); color: rgb(61, 43, 31); font-size: 13px; font-weight: 600; cursor: pointer;"
      >
        Download corrected paper
      </button>
      <button
        data-testid="results-download-receipt"
        style="flex: 1 1 0%; padding: 12px; border-radius: 8px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242); color: rgb(61, 43, 31); font-size: 13px; font-weight: 600; cursor: pointer;"
      >
        Download receipt
      </button>
    </div>
    <div
      style="margin-bottom: 24px;"
    >
      <p
        style="font-size: 13px; font-weight: 600; margin-bottom: 12px; opacity: 0.7;"
      >
        Individual service outputs
      </p>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          data-testid="results-service-spellcheck"
          style="padding: 12px; border-radius: 6px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242);"
        >
          <div
            style="display: flex; align-items: center; justify-content: space-between;"
          >
            <span
              style="font-size: 13px; font-weight: 600; color: rgb(61, 43, 31);"
            >
              Spellcheck
            </span>
            <div
              style="display: flex; gap: 8px;"
            >
              <button
                data-testid="results-service-spellcheck-view"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                View
              </button>
              <button
                data-testid="results-service-spellcheck-copy"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          data-testid="results-service-edit-abstract"
          style="padding: 12px; border-radius: 6px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242);"
        >
          <div
            style="display: flex; align-items: center; justify-content: space-between;"
          >
            <span
              style="font-size: 13px; font-weight: 600; color: rgb(61, 43, 31);"
            >
              Abstract Edit
            </span>
            <div
              style="display: flex; gap: 8px;"
            >
              <button
                data-testid="results-service-edit-abstract-view"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                View
              </button>
              <button
                data-testid="results-service-edit-abstract-copy"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          data-testid="results-service-doi-metadata"
          style="padding: 12px; border-radius: 6px; border: 1px solid rgb(139, 105, 20); background-color: rgb(250, 247, 242);"
        >
          <div
            style="display: flex; align-items: center; justify-content: space-between;"
          >
            <span
              style="font-size: 13px; font-weight: 600; color: rgb(61, 43, 31);"
            >
              DOI Metadata
            </span>
            <div
              style="display: flex; gap: 8px;"
            >
              <button
                data-testid="results-service-doi-metadata-view"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                View
              </button>
              <button
                data-testid="results-service-doi-metadata-copy"
                style="padding: 4px 10px; border-radius: 4px; border: 1px solid rgb(139, 105, 20); background-color: transparent; color: rgb(61, 43, 31); font-size: 12px; cursor: pointer;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="receipt"
      style="background-color: rgb(250, 247, 242); border: 1px solid rgb(139, 105, 20); border-radius: 8px; padding: 24px; color: rgb(61, 43, 31);"
    >
      <div
        style="margin-bottom: 20px; border-bottom: 1px solid rgb(139, 105, 20); padding-bottom: 16px;"
      >
        <p
          style="font-size: 14px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.08em; margin-bottom: 8px;"
        >
          Woodchipper Service Receipt
        </p>
        <p
          style="font-size: 13px; opacity: 0.7;"
        >
          Date: 
          2026-07-11
        </p>
        <p
          style="font-size: 13px; opacity: 0.7;"
        >
          Evaluation Band: 
          strong
        </p>
      </div>
      <div
        style="margin-bottom: 16px; padding-bottom: 16px; border-bottom: 1px solid rgb(245, 240, 232);"
      >
        <p
          style="font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 8px;"
        >
          Spellcheck
        </p>
        <p
          style="font-size: 13px; line-height: 1.6; white-space: pre-wrap;"
        >
          Corrected 5 spelling errors: "recieve" → "receive", "occured" → "occurred", "seperate" → "separate", "definately" → "definitely", "accomodate" → "accommodate".
        </p>
        <p
          style="font-size: 12px; opacity: 0.6; margin-top: 4px;"
        >
          Changes applied: 
          5
        </p>
      </div>
      <div
        style="margin-bottom: 16px; padding-bottom: 16px; border-bottom: 1px solid rgb(245, 240, 232);"
      >
        <p
          style="font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 8px;"
        >
          Abstract Edit
        </p>
        <p
          style="font-size: 13px; line-height: 1.6; white-space: pre-wrap;"
        >
          Revised abstract for clarity. Reduced word count from 312 to 248. Strengthened opening thesis statement and tightened concluding implications.
        </p>
        <p
          style="font-size: 12px; opacity: 0.6; margin-top: 4px;"
        >
          Changes applied: 
          12
        </p>
      </div>
      <div
        style="margin-bottom: 0px; padding-bottom: 0px; border-bottom: medium;"
      >
        <p
          style="font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.06em; margin-bottom: 8px;"
        >
          DOI Metadata
        </p>
        <p
          style="font-size: 13px; line-height: 1.6; white-space: pre-wrap;"
        >
          {"title":"On the Substrate Logic of Bio-Computing","authors":[{"given":"J.","family":"Frel"}],"type":"journal-article","DOI":"10.1234/example.2026"}
        </p>
      </div>
      <div
        style="margin-top: 20px; padding-top: 16px; border-top: 1px solid rgb(139, 105, 20); font-size: 11px; opacity: 0.5;"
      >
        Generated by Woodchipper · 
        2026-07-11
      </div>
    </div>
  </div>
</div>
`;
